--- a/03/styles2.css
+++ b/03/styles2.css
@@ -1,2 +1,2 @@
 form {padding: 50px; background-color: blueviolet;}
-div {margin-top: 25; background-color: darkcyan;} 
+div {margin-top: 25px; background-color: darkcyan;} 
